--- a/srcs/default.conf
+++ b/srcs/default.conf
@@ -46,6 +46,7 @@ server {
 	server_name _;
 
 	location / {
+		include snippets/autoindex.conf;
 		# First attempt to serve request as file, then
 		# as directory, then fall back to displaying a 404.
 		try_files $uri $uri/ =404;
